--- a/notebooks/01_folder_structure.ipynb
+++ b/notebooks/01_folder_structure.ipynb
@@ -42,170 +42,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|-- [FILE] main.py\n",
-      "|-- [DIR] Metric Results_Merged_20250918_210150\n",
-      "    |-- [DIR] Chicago\n",
-      "        |-- [DIR] CensusTract\n",
-      "            |-- [FILE] Chicago_CensusTract_merged.csv\n",
-      "        |-- [DIR] ZipCode\n",
-      "            |-- [FILE] Chicago_ZipCode_merged.csv\n",
-      "    |-- [DIR] DC\n",
-      "        |-- [DIR] CensusTract\n",
-      "            |-- [FILE] DC_CensusTract_merged.csv\n",
-      "        |-- [DIR] ZipCode\n",
-      "            |-- [FILE] DC_ZipCode_merged.csv\n",
-      "    |-- [DIR] Houston\n",
-      "        |-- [DIR] CensusTract\n",
-      "            |-- [FILE] Houston_CensusTract_merged.csv\n",
-      "        |-- [DIR] ZipCode\n",
-      "            |-- [FILE] Houston_ZipCode_merged.csv\n",
-      "    |-- [DIR] LA\n",
-      "        |-- [DIR] CensusTract\n",
-      "            |-- [FILE] LA_CensusTract_merged.csv\n",
-      "        |-- [DIR] ZipCode\n",
-      "            |-- [FILE] LA_ZipCode_merged.csv\n",
-      "    |-- [DIR] NYC\n",
-      "        |-- [DIR] CensusTract\n",
-      "            |-- [FILE] NYC_CensusTract_merged.csv\n",
-      "        |-- [DIR] ZipCode\n",
-      "            |-- [FILE] NYC_ZipCode_merged.csv\n",
-      "    |-- [DIR] SF\n",
-      "        |-- [DIR] CensusTract\n",
-      "            |-- [FILE] SF_CensusTract_merged.csv\n",
-      "        |-- [DIR] ZipCode\n",
-      "            |-- [FILE] SF_ZipCode_merged.csv\n",
-      "|-- [DIR] POC_centroid_WGS1984\n",
-      "    |-- [DIR] census\n",
-      "        |-- [FILE] Chicago_CensusTract_Project.csv\n",
-      "        |-- [FILE] DC_CensusTract_Project.csv\n",
-      "        |-- [FILE] Houston_CensusTract_Project.csv\n",
-      "        |-- [FILE] LA_CensusTract_Project.csv\n",
-      "        |-- [FILE] NYC_CensusTract_Project.csv\n",
-      "        |-- [FILE] SF_CensusTract_Project.csv\n",
-      "        |-- [DIR] shp file\n",
-      "            |-- [DIR] Chicago\n",
-      "                |-- [DIR] CensusTract\n",
-      "                    |-- [FILE] Chicago_CensusTract_Project.cpg\n",
-      "                    |-- [FILE] Chicago_CensusTract_Project.dbf\n",
-      "                    |-- [FILE] Chicago_CensusTract_Project.prj\n",
-      "                    |-- [FILE] Chicago_CensusTract_Project.sbn\n",
-      "                    |-- [FILE] Chicago_CensusTract_Project.sbx\n",
-      "                    |-- [FILE] Chicago_CensusTract_Project.shp\n",
-      "                    |-- [FILE] Chicago_CensusTract_Project.shp.xml\n",
-      "                    |-- [FILE] Chicago_CensusTract_Project.shx\n",
-      "            |-- [DIR] DC\n",
-      "                |-- [DIR] CensusTract\n",
-      "                    |-- [FILE] DC_CensusTract_Project.cpg\n",
-      "                    |-- [FILE] DC_CensusTract_Project.dbf\n",
-      "                    |-- [FILE] DC_CensusTract_Project.prj\n",
-      "                    |-- [FILE] DC_CensusTract_Project.sbn\n",
-      "                    |-- [FILE] DC_CensusTract_Project.sbx\n",
-      "                    |-- [FILE] DC_CensusTract_Project.shp\n",
-      "                    |-- [FILE] DC_CensusTract_Project.shp.xml\n",
-      "                    |-- [FILE] DC_CensusTract_Project.shx\n",
-      "            |-- [DIR] Houston\n",
-      "                |-- [DIR] CensusTract\n",
-      "                    |-- [FILE] Houston_CensusTract_Project.cpg\n",
-      "                    |-- [FILE] Houston_CensusTract_Project.dbf\n",
-      "                    |-- [FILE] Houston_CensusTract_Project.prj\n",
-      "                    |-- [FILE] Houston_CensusTract_Project.sbn\n",
-      "                    |-- [FILE] Houston_CensusTract_Project.sbx\n",
-      "                    |-- [FILE] Houston_CensusTract_Project.shp\n",
-      "                    |-- [FILE] Houston_CensusTract_Project.shp.xml\n",
-      "                    |-- [FILE] Houston_CensusTract_Project.shx\n",
-      "            |-- [DIR] LA\n",
-      "                |-- [DIR] CensusTract\n",
-      "                    |-- [FILE] LA_CensusTract_Project.cpg\n",
-      "                    |-- [FILE] LA_CensusTract_Project.dbf\n",
-      "                    |-- [FILE] LA_CensusTract_Project.prj\n",
-      "                    |-- [FILE] LA_CensusTract_Project.sbn\n",
-      "                    |-- [FILE] LA_CensusTract_Project.sbx\n",
-      "                    |-- [FILE] LA_CensusTract_Project.shp\n",
-      "                    |-- [FILE] LA_CensusTract_Project.shp.xml\n",
-      "                    |-- [FILE] LA_CensusTract_Project.shx\n",
-      "            |-- [DIR] NYC\n",
-      "                |-- [DIR] CensusTract\n",
-      "                    |-- [FILE] NYC_CensusTract_Project.cpg\n",
-      "                    |-- [FILE] NYC_CensusTract_Project.dbf\n",
-      "                    |-- [FILE] NYC_CensusTract_Project.prj\n",
-      "                    |-- [FILE] NYC_CensusTract_Project.sbn\n",
-      "                    |-- [FILE] NYC_CensusTract_Project.sbx\n",
-      "                    |-- [FILE] NYC_CensusTract_Project.shp\n",
-      "                    |-- [FILE] NYC_CensusTract_Project.shp.xml\n",
-      "                    |-- [FILE] NYC_CensusTract_Project.shx\n",
-      "            |-- [DIR] SF\n",
-      "                |-- [DIR] CensusTract\n",
-      "                    |-- [FILE] SF_CensusTract_Project.cpg\n",
-      "                    |-- [FILE] SF_CensusTract_Project.dbf\n",
-      "                    |-- [FILE] SF_CensusTract_Project.prj\n",
-      "                    |-- [FILE] SF_CensusTract_Project.sbn\n",
-      "                    |-- [FILE] SF_CensusTract_Project.sbx\n",
-      "                    |-- [FILE] SF_CensusTract_Project.shp\n",
-      "                    |-- [FILE] SF_CensusTract_Project.shp.xml\n",
-      "                    |-- [FILE] SF_CensusTract_Project.shx\n",
-      "    |-- [DIR] zipcode\n",
-      "        |-- [FILE] Chicago_ZipCode_Project.csv\n",
-      "        |-- [FILE] DC_ZipCode_Project.csv\n",
-      "        |-- [FILE] Houston_ZipCode_Project.csv\n",
-      "        |-- [FILE] LA_ZipCode_Project.csv\n",
-      "        |-- [FILE] NYC_ZipCode_Project.csv\n",
-      "        |-- [FILE] SF_ZipCode_Project.csv\n",
-      "        |-- [DIR] shp file\n",
-      "            |-- [FILE] Chicago_ZipCode_Project.cpg\n",
-      "            |-- [FILE] Chicago_ZipCode_Project.dbf\n",
-      "            |-- [FILE] Chicago_ZipCode_Project.prj\n",
-      "            |-- [FILE] Chicago_ZipCode_Project.sbn\n",
-      "            |-- [FILE] Chicago_ZipCode_Project.sbx\n",
-      "            |-- [FILE] Chicago_ZipCode_Project.shp\n",
-      "            |-- [FILE] Chicago_ZipCode_Project.shp.xml\n",
-      "            |-- [FILE] Chicago_ZipCode_Project.shx\n",
-      "            |-- [FILE] DC_ZipCode_Project.cpg\n",
-      "            |-- [FILE] DC_ZipCode_Project.dbf\n",
-      "            |-- [FILE] DC_ZipCode_Project.prj\n",
-      "            |-- [FILE] DC_ZipCode_Project.sbn\n",
-      "            |-- [FILE] DC_ZipCode_Project.sbx\n",
-      "            |-- [FILE] DC_ZipCode_Project.shp\n",
-      "            |-- [FILE] DC_ZipCode_Project.shp.xml\n",
-      "            |-- [FILE] DC_ZipCode_Project.shx\n",
-      "            |-- [FILE] Houston_ZipCode_Project.cpg\n",
-      "            |-- [FILE] Houston_ZipCode_Project.dbf\n",
-      "            |-- [FILE] Houston_ZipCode_Project.prj\n",
-      "            |-- [FILE] Houston_ZipCode_Project.sbn\n",
-      "            |-- [FILE] Houston_ZipCode_Project.sbx\n",
-      "            |-- [FILE] Houston_ZipCode_Project.shp\n",
-      "            |-- [FILE] Houston_ZipCode_Project.shp.xml\n",
-      "            |-- [FILE] Houston_ZipCode_Project.shx\n",
-      "            |-- [FILE] LA_ZipCode_Project.cpg\n",
-      "            |-- [FILE] LA_ZipCode_Project.dbf\n",
-      "            |-- [FILE] LA_ZipCode_Project.prj\n",
-      "            |-- [FILE] LA_ZipCode_Project.sbn\n",
-      "            |-- [FILE] LA_ZipCode_Project.sbx\n",
-      "            |-- [FILE] LA_ZipCode_Project.shp\n",
-      "            |-- [FILE] LA_ZipCode_Project.shp.xml\n",
-      "            |-- [FILE] LA_ZipCode_Project.shx\n",
-      "            |-- [FILE] NYC_ZipCode_Project.cpg\n",
-      "            |-- [FILE] NYC_ZipCode_Project.dbf\n",
-      "            |-- [FILE] NYC_ZipCode_Project.prj\n",
-      "            |-- [FILE] NYC_ZipCode_Project.sbn\n",
-      "            |-- [FILE] NYC_ZipCode_Project.sbx\n",
-      "            |-- [FILE] NYC_ZipCode_Project.shp\n",
-      "            |-- [FILE] NYC_ZipCode_Project.shp.xml\n",
-      "            |-- [FILE] NYC_ZipCode_Project.shx\n",
-      "            |-- [FILE] SF_ZipCode_Project.cpg\n",
-      "            |-- [FILE] SF_ZipCode_Project.dbf\n",
-      "            |-- [FILE] SF_ZipCode_Project.prj\n",
-      "            |-- [FILE] SF_ZipCode_Project.sbn\n",
-      "            |-- [FILE] SF_ZipCode_Project.sbx\n",
-      "            |-- [FILE] SF_ZipCode_Project.shp\n",
-      "            |-- [FILE] SF_ZipCode_Project.shp.xml\n",
-      "            |-- [FILE] SF_ZipCode_Project.shx\n"
+      "|-- [DIR] 01_merge\n",
+      "    |-- [FILE] 01_merge.ipynb\n",
+      "    |-- [FILE] FX_merged_inner.csv\n",
+      "    |-- [FILE] FX_merged_outer.csv\n",
+      "|-- [DIR] evaluation\n",
+      "    |-- [FILE] metrics.py\n",
+      "    |-- [FILE] __init__.py\n",
+      "    |-- [DIR] __pycache__\n",
+      "        |-- [FILE] metrics.cpython-312.pyc\n",
+      "        |-- [FILE] __init__.cpython-312.pyc\n",
+      "|-- [DIR] loaders\n",
+      "    |-- [FILE] data_loader.py\n",
+      "    |-- [FILE] __init__.py\n",
+      "    |-- [DIR] __pycache__\n",
+      "        |-- [FILE] data_loader.cpython-312.pyc\n",
+      "        |-- [FILE] __init__.cpython-312.pyc\n",
+      "|-- [DIR] models\n",
+      "    |-- [FILE] base_model.py\n",
+      "    |-- [FILE] ensemble_models.py\n",
+      "    |-- [FILE] historical_simulation.py\n",
+      "    |-- [FILE] lgbm_model.py\n",
+      "    |-- [FILE] neural_networks.py\n",
+      "    |-- [FILE] qr_im.py\n",
+      "    |-- [FILE] random_forest.py\n",
+      "    |-- [FILE] xgboost_model.py\n",
+      "    |-- [FILE] __init__.py\n",
+      "    |-- [DIR] __pycache__\n",
+      "        |-- [FILE] base_model.cpython-312.pyc\n",
+      "        |-- [FILE] ensemble_models.cpython-312.pyc\n",
+      "        |-- [FILE] historical_simulation.cpython-312.pyc\n",
+      "        |-- [FILE] lgbm_model.cpython-312.pyc\n",
+      "        |-- [FILE] qr_im.cpython-312.pyc\n",
+      "        |-- [FILE] random_forest.cpython-312.pyc\n",
+      "        |-- [FILE] xgboost_model.cpython-312.pyc\n",
+      "        |-- [FILE] __init__.cpython-312.pyc\n",
+      "|-- [FILE] runner.py\n",
+      "|-- [DIR] utils\n",
+      "    |-- [FILE] logger.py\n",
+      "    |-- [FILE] __init__.py\n",
+      "    |-- [DIR] __pycache__\n",
+      "        |-- [FILE] logger.cpython-312.pyc\n",
+      "        |-- [FILE] __init__.cpython-312.pyc\n",
+      "|-- [DIR] visualization\n",
+      "    |-- [FILE] plotly_charts.py\n",
+      "    |-- [FILE] __init__.py\n",
+      "    |-- [DIR] __pycache__\n",
+      "        |-- [FILE] plotly_charts.cpython-312.pyc\n",
+      "        |-- [FILE] __init__.cpython-312.pyc\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
     "    # Set the path to the directory you want to list\n",
-    "    path = r\"D:\\Github\\Merged_Metrics_TC\\Ver2 - Merge according to Filename\\Step4_Add_Coordinates\"\n",
+    "    path = r\"D:\\Github\\QR-IM\\src\"\n",
     "    \n",
     "    # Call the function to list the directory structure\n",
     "    list_dir_structure(path)\n",
