--- a/notebooks/01_folder_structure.ipynb
+++ b/notebooks/01_folder_structure.ipynb
@@ -19,9 +19,10 @@
     "    \"\"\"\n",
     "    try:\n",
     "        # List all items in the directory\n",
+    "        print(f\"File path: {path}\")\n",
     "        for item in os.listdir(path):\n",
     "            full_path = os.path.join(path, item)\n",
-    "            \n",
+    "\n",
     "            # Check if item is a file or directory and display accordingly\n",
     "            if os.path.isdir(full_path):\n",
     "                print(\" \" * indent + \"|-- [DIR] \" + item)  # Mark directories with [DIR]\n",
@@ -42,61 +43,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|-- [DIR] 01_merge\n",
-      "    |-- [FILE] 01_merge.ipynb\n",
-      "    |-- [FILE] FX_merged_inner.csv\n",
-      "    |-- [FILE] FX_merged_outer.csv\n",
-      "|-- [DIR] evaluation\n",
-      "    |-- [FILE] metrics.py\n",
-      "    |-- [FILE] __init__.py\n",
-      "    |-- [DIR] __pycache__\n",
-      "        |-- [FILE] metrics.cpython-312.pyc\n",
-      "        |-- [FILE] __init__.cpython-312.pyc\n",
-      "|-- [DIR] loaders\n",
-      "    |-- [FILE] data_loader.py\n",
-      "    |-- [FILE] __init__.py\n",
-      "    |-- [DIR] __pycache__\n",
-      "        |-- [FILE] data_loader.cpython-312.pyc\n",
-      "        |-- [FILE] __init__.cpython-312.pyc\n",
-      "|-- [DIR] models\n",
-      "    |-- [FILE] base_model.py\n",
-      "    |-- [FILE] ensemble_models.py\n",
-      "    |-- [FILE] historical_simulation.py\n",
-      "    |-- [FILE] lgbm_model.py\n",
-      "    |-- [FILE] neural_networks.py\n",
-      "    |-- [FILE] qr_im.py\n",
-      "    |-- [FILE] random_forest.py\n",
-      "    |-- [FILE] xgboost_model.py\n",
-      "    |-- [FILE] __init__.py\n",
-      "    |-- [DIR] __pycache__\n",
-      "        |-- [FILE] base_model.cpython-312.pyc\n",
-      "        |-- [FILE] ensemble_models.cpython-312.pyc\n",
-      "        |-- [FILE] historical_simulation.cpython-312.pyc\n",
-      "        |-- [FILE] lgbm_model.cpython-312.pyc\n",
-      "        |-- [FILE] qr_im.cpython-312.pyc\n",
-      "        |-- [FILE] random_forest.cpython-312.pyc\n",
-      "        |-- [FILE] xgboost_model.cpython-312.pyc\n",
-      "        |-- [FILE] __init__.cpython-312.pyc\n",
-      "|-- [FILE] runner.py\n",
-      "|-- [DIR] utils\n",
-      "    |-- [FILE] logger.py\n",
-      "    |-- [FILE] __init__.py\n",
-      "    |-- [DIR] __pycache__\n",
-      "        |-- [FILE] logger.cpython-312.pyc\n",
-      "        |-- [FILE] __init__.cpython-312.pyc\n",
-      "|-- [DIR] visualization\n",
-      "    |-- [FILE] plotly_charts.py\n",
-      "    |-- [FILE] __init__.py\n",
-      "    |-- [DIR] __pycache__\n",
-      "        |-- [FILE] plotly_charts.cpython-312.pyc\n",
-      "        |-- [FILE] __init__.cpython-312.pyc\n"
+      "File path: D:\\Github\\PyGRF-Result-automation\\data\n",
+      "|-- [DIR] ranked_features\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\data\\ranked_features\n",
+      "    |-- [FILE] Chicago_CensusTract_HousePrice_ranked_features.csv\n",
+      "    |-- [FILE] Chicago_CensusTract_Population_ranked_features.csv\n",
+      "    |-- [FILE] Chicago_CensusTract_RentalPrice_ranked_features.csv\n",
+      "    |-- [FILE] DC_CensusTract_HousePrice_ranked_features.csv\n",
+      "    |-- [FILE] DC_CensusTract_Population_ranked_features.csv\n",
+      "    |-- [FILE] DC_CensusTract_RentalPrice_ranked_features.csv\n",
+      "    |-- [FILE] Houston_CensusTract_HousePrice_ranked_features.csv\n",
+      "    |-- [FILE] Houston_CensusTract_Population_ranked_features.csv\n",
+      "    |-- [FILE] Houston_CensusTract_RentalPrice_ranked_features.csv\n",
+      "    |-- [FILE] LA_CensusTract_HousePrice_ranked_features.csv\n",
+      "    |-- [FILE] LA_CensusTract_Population_ranked_features.csv\n",
+      "    |-- [FILE] LA_CensusTract_RentalPrice_ranked_features.csv\n",
+      "    |-- [DIR] legacy\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\data\\ranked_features\\legacy\n",
+      "        |-- [FILE] Chicago_CensusTract_ranked_features.csv\n",
+      "        |-- [FILE] DC_CensusTract_ranked_features.csv\n",
+      "        |-- [FILE] Houston_CensusTract_ranked_features.csv\n",
+      "        |-- [FILE] LA_CensusTract_ranked_features.csv\n",
+      "        |-- [FILE] NYC_CensusTract_ranked_features.csv\n",
+      "        |-- [FILE] SF_CensusTract_ranked_features.csv\n",
+      "    |-- [FILE] NYC_CensusTract_HousePrice_ranked_features.csv\n",
+      "    |-- [FILE] NYC_CensusTract_Population_ranked_features.csv\n",
+      "    |-- [FILE] NYC_CensusTract_RentalPrice_ranked_features.csv\n",
+      "    |-- [FILE] SF_CensusTract_HousePrice_ranked_features.csv\n",
+      "    |-- [FILE] SF_CensusTract_Population_ranked_features.csv\n",
+      "    |-- [FILE] SF_CensusTract_RentalPrice_ranked_features.csv\n",
+      "|-- [DIR] summary\n",
+      "File path: D:\\Github\\PyGRF-Result-automation\\data\\summary\n",
+      "    |-- [FILE] Summary of PyGRF results 2.xlsx\n",
+      "    |-- [FILE] Summary of PyGRF results.xlsx\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
     "    # Set the path to the directory you want to list\n",
-    "    path = r\"D:\\Github\\QR-IM\\src\"\n",
+    "    path = r\"D:\\Github\\PyGRF-Result-automation\\data\"\n",
     "    \n",
     "    # Call the function to list the directory structure\n",
     "    list_dir_structure(path)\n",
