--- a/notebooks/02_view_columns.ipynb
+++ b/notebooks/02_view_columns.ipynb
@@ -11,32 +11,41 @@
     "\n",
     "def show_columns(file_path):\n",
     "    \"\"\"\n",
-    "    Display all column names from a CSV or Excel file.\n",
-    "    - For CSV: read once and print column names.\n",
-    "    - For Excel: iterate through all sheets and print column names for each sheet.\n",
+    "    顯示 .csv 或 .xlsx 檔案中所有變數名稱，\n",
+    "    並額外印出每個工作表或資料表的前 5 行內容作為概覽。\n",
     "    \"\"\"\n",
     "\n",
     "    if file_path.endswith(\".csv\"):\n",
-    "        # CSV file has only one table\n",
+    "        # === CSV 檔案處理 ===\n",
     "        df = pd.read_csv(file_path, nrows=5)\n",
-    "        print(\"File Type: CSV\")\n",
+    "        print(f\"File: {file_path}\")\n",
+    "        print(\"File Type: CSV\\n\")\n",
     "        print(\"Columns:\")\n",
     "        for col in df.columns:\n",
     "            print(f\"- {col}\")\n",
     "\n",
+    "        print(\"\\nPreview (first 5 rows):\")\n",
+    "        print(df.head())  # 顯示前五行內容\n",
+    "        print(\"\\n\" + \"=\" * 60 + \"\\n\")\n",
+    "\n",
     "    elif file_path.endswith(\".xlsx\"):\n",
-    "        # Excel file may contain multiple sheets\n",
+    "        # === Excel 檔案處理 ===\n",
     "        xls = pd.ExcelFile(file_path)\n",
+    "        print(f\"File: {file_path}\")\n",
     "        print(\"File Type: Excel\")\n",
     "        print(f\"Found {len(xls.sheet_names)} sheets: {xls.sheet_names}\\n\")\n",
     "\n",
-    "        # Loop through each sheet\n",
+    "        # 逐一讀取每個工作表\n",
     "        for sheet in xls.sheet_names:\n",
     "            df = pd.read_excel(file_path, sheet_name=sheet, nrows=5)\n",
     "            print(f\"Sheet: {sheet}\")\n",
+    "            print(\"Columns:\")\n",
     "            for col in df.columns:\n",
     "                print(f\"- {col}\")\n",
-    "            print()  # empty line for readability\n",
+    "\n",
+    "            print(\"\\nPreview (first 5 rows):\")\n",
+    "            print(df.head())  # 顯示前五行內容\n",
+    "            print(\"\\n\" + \"=\" * 60 + \"\\n\")\n",
     "\n",
     "    else:\n",
     "        raise ValueError(\"Only .csv and .xlsx are supported\")"
@@ -45,6 +54,83 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "1f7b74d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File: D:\\Github\\PyGRF-Result-automation\\data\\summary\\Summary of PyGRF results 2.xlsx\n",
+      "File Type: Excel\n",
+      "Found 3 sheets: ['Global Elbow Features', 'Local SHAP Elbow Features', 'Local MDI Elbow Features']\n",
+      "\n",
+      "Sheet: Global Elbow Features\n",
+      "Columns:\n",
+      "- City\n",
+      "- Var\n",
+      "- MDI\n",
+      "- SHAP\n",
+      "\n",
+      "Preview (first 5 rows):\n",
+      "      City          Var  MDI  SHAP\n",
+      "0      NYC  house_price   60    78\n",
+      "1       DC  house_price   80    86\n",
+      "2       LA  house_price   66    60\n",
+      "3       SF  house_price   78    82\n",
+      "4  Houston  house_price   82    73\n",
+      "\n",
+      "============================================================\n",
+      "\n",
+      "Sheet: Local SHAP Elbow Features\n",
+      "Columns:\n",
+      "- City\n",
+      "- Var\n",
+      "- Mean\n",
+      "- Median\n",
+      "- STD\n",
+      "- IQR\n",
+      "\n",
+      "Preview (first 5 rows):\n",
+      "      City          Var  Mean  Median  STD  IQR\n",
+      "0      NYC  house_price    98      78  103   81\n",
+      "1       DC  house_price   101      94  108   91\n",
+      "2       LA  house_price    97      95   96   84\n",
+      "3       SF  house_price    84      67   89   76\n",
+      "4  Houston  house_price   110     124  108   94\n",
+      "\n",
+      "============================================================\n",
+      "\n",
+      "Sheet: Local MDI Elbow Features\n",
+      "Columns:\n",
+      "- City\n",
+      "- Var\n",
+      "- Mean\n",
+      "- Median\n",
+      "- STD\n",
+      "- IQR\n",
+      "\n",
+      "Preview (first 5 rows):\n",
+      "      City          Var  Mean  Median  STD  IQR\n",
+      "0      NYC  house_price   100      83  106   85\n",
+      "1       DC  house_price    98      95  103   87\n",
+      "2       LA  house_price   107     104  106   90\n",
+      "3       SF  house_price    85      81   91   76\n",
+      "4  Houston  house_price   109     131  107  100\n",
+      "\n",
+      "============================================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1\n",
+    "show_columns(r\"D:\\Github\\PyGRF-Result-automation\\data\\summary\\Summary of PyGRF results 2.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "30dd5808",
    "metadata": {},
    "outputs": [
@@ -52,39 +138,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "File: D:\\Github\\PyGRF-Result-automation\\data\\summary\\Summary of PyGRF results.xlsx\n",
       "File Type: Excel\n",
-      "Found 3 sheets: ['Global Elbow Features', 'Local SHAP Elbow Features', 'Local MDI Elbow Features (Mean,']\n",
+      "Found 3 sheets: ['Global Elbow Features', 'Local SHAP Elbow Features', 'Local MDI Elbow Features']\n",
       "\n",
       "Sheet: Global Elbow Features\n",
+      "Columns:\n",
       "- City\n",
       "- MDI\n",
       "- SHAP\n",
       "\n",
+      "Preview (first 5 rows):\n",
+      "      City  MDI  SHAP\n",
+      "0      NYC   61    60\n",
+      "1       DC   64    61\n",
+      "2       LA   50    47\n",
+      "3       SF   60    62\n",
+      "4  Houston   60    63\n",
+      "\n",
+      "============================================================\n",
+      "\n",
       "Sheet: Local SHAP Elbow Features\n",
+      "Columns:\n",
       "- City\n",
       "- Mean\n",
       "- Median\n",
       "- STD\n",
       "- IQR\n",
       "\n",
-      "Sheet: Local MDI Elbow Features (Mean,\n",
+      "Preview (first 5 rows):\n",
+      "      City  Mean  Median  STD  IQR\n",
+      "0      NYC    72      63   83   65\n",
+      "1       DC    87      83   89   78\n",
+      "2       LA    76      77   80   70\n",
+      "3       SF    67      57   73   62\n",
+      "4  Houston    92     102   86   82\n",
+      "\n",
+      "============================================================\n",
+      "\n",
+      "Sheet: Local MDI Elbow Features\n",
+      "Columns:\n",
       "- City\n",
       "- Mean\n",
       "- Median\n",
       "- STD\n",
       "- IQR\n",
+      "\n",
+      "Preview (first 5 rows):\n",
+      "      City  Mean  Median  STD  IQR\n",
+      "0      NYC    65      60   77   65\n",
+      "1       DC    80      79   86   75\n",
+      "2       LA    79      85   83   67\n",
+      "3       SF    72      58   83   70\n",
+      "4  Houston    96     103   88   87\n",
+      "\n",
+      "============================================================\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Example 1\n",
-    "show_columns(r\"D:\\Github\\PyGRF-Result-automation\\Summary of PyGRF results.xlsx\")"
+    "show_columns(r\"D:\\Github\\PyGRF-Result-automation\\data\\summary\\Summary of PyGRF results.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "146fe8e5",
    "metadata": {},
    "outputs": [
@@ -92,20 +212,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "File: D:\\Github\\PyGRF-Result-automation\\data\\ranked_features\\Chicago_CensusTract_HousePrice_ranked_features.csv\n",
       "File Type: CSV\n",
+      "\n",
       "Columns:\n",
       "- feature\n",
       "- global_rank\n",
       "- local_mean_rank\n",
       "- local_median_rank\n",
       "- local_std_rank\n",
-      "- local_iqr_rank\n"
+      "- local_iqr_rank\n",
+      "\n",
+      "Preview (first 5 rows):\n",
+      "                                             feature  global_rank  \\\n",
+      "0   MedianRentVSIncome_MED_RENT_AS_PCT_OF_MED_INCOME          1.0   \n",
+      "1  DistributionOfJobs_Proportion of jobs for work...          2.0   \n",
+      "2  DistributionOfJobs_Proportion of jobs for work...          3.0   \n",
+      "3  RecreationalFacilityDensityByArea_SOURCE_OVERL...          4.0   \n",
+      "4         JobAccessByDifferentTravelModes_Home_RATIO          5.0   \n",
+      "\n",
+      "   local_mean_rank  local_median_rank  local_std_rank  local_iqr_rank  \n",
+      "0              1.0                1.0            19.0            15.0  \n",
+      "1             12.0               11.0            10.0            17.0  \n",
+      "2             13.0               14.0            12.0            20.0  \n",
+      "3              2.0                2.0             3.0             3.0  \n",
+      "4             11.0                6.0             9.0             4.0  \n",
+      "\n",
+      "============================================================\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Example 2\n",
-    "show_columns(r\"D:\\Github\\PyGRF-Result-automation\\PyGRF results\\ranked_features.csv\\Chicago_CensusTract_ranked_features.csv\")"
+    "# Example 3\n",
+    "show_columns(r\"D:\\Github\\PyGRF-Result-automation\\data\\ranked_features\\Chicago_CensusTract_HousePrice_ranked_features.csv\")"
    ]
   }
  ],
